set version number to 5.0.0 replaced many methods and classes that are deprecated since java 9
git-svn-id: https://db-svn.informatik.uni-bremen.de/repos/stuff/use/trunk@6289 e95982d2-0d12-e879-a455-8ce5a0885042