@@ -74,7 +74,7 @@ public final class IntegerValue extends Value {
     public int hashCode() {
         // Note: this must be the same hash code as for RealValue if
         // we want to treat, e.g., 1.0 equal to 1 in collections.
-        return new Double(fValue).hashCode();
+        return Double.valueOf(fValue).hashCode();
     }
 
     @Override
